--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,9 @@ group = 'kr.ac.koreantech'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '17'
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
 }
 
 configurations {
