--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -45,12 +45,12 @@ services:
       - my_bridge_network
 
   app1:
-    image: wynnwind/devops:latest
+    image: wynnwind/devops:0.0.1
     networks:
       - my_bridge_network
 
   app2:
-    image: wynnwind/devops:latest
+    image: wynnwind/devops:0.0.1
     networks:
       - my_bridge_network
 
