--- a/.github/workflows/checkout3.yml
+++ b/.github/workflows/checkout3.yml
@@ -32,7 +32,7 @@ jobs:
 
     # 3. Docker 이미지 빌드
     - name: docker image build
-      run: docker build -t ${{ secrets.USERNAME }}/devops:0.0.1 .
+      run: docker build -t ${{ secrets.USERNAME }}/devops:${{ env.VERSION }}.
 
     # 4. DockerHub 로그인
     - name: docker login
@@ -43,7 +43,7 @@ jobs:
     
     # 5. Docker Hub 이미지 푸시
     - name: docker Hub push
-      run: docker push ${{ secrets.USERNAME }}/devops:0.0.1
+      run: docker push ${{ secrets.USERNAME }}/devops:${{ env.VERSION }}
 
   deploy:
     needs: build-docker-image  # build 후에 실행되도록 정의
